<resources>
    <string name="app_name">Hamari Sawari</string>
    <string name="user_id">User-ID</string>
    <string name="password">Password</string>
    <string name="hamari_sawari">Hamari Sawari</string>
    <string name="sign_up">Sign UP</string>
    <string name="sign_in">Sign in</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Admin_id" />

    <string-array name="Manufacturer">
        <item>Toyota</item>
        <item>Honda</item>
        <item>Suzuki</item>
        <item>KIA</item>
    </string-array>
    <string-array name="BikeManufacturer">
        <item>Honda</item>
        <item>United</item>
        <item>Suzuki</item>
        <item>Yamaha</item>
    </string-array>
    <string-array name="BikeEngine">
        <item>70</item>
        <item>100</item>
        <item>125</item>
        <item>150</item>
    </string-array>
    <string-array name="BikeColor">
        <item>Red</item>
        <item>Black</item>
    </string-array>
    <string-array name="CarColor">
        <item>Red</item>
        <item>Black</item>
        <item>Grey</item>
        <item>Bronze</item>
        <item>White</item>
        <item>Blue</item>
    </string-array>
    <string-array name="CarEngine">
        <item>660</item>
        <item>800</item>
        <item>1000</item>
        <item>1200</item>
        <item>1300</item>
        <item>1500</item>
        <item>1800</item>
        <item>2000</item>
        <item>2500</item>
        <item>2700</item>
        <item>3000</item>
    </string-array>
    <string-array name="Transmission">
        <item>Automatic</item>
        <item>Manual</item>
    </string-array>
    <string-array name="seatingCapacityBike">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>
    <string-array name="seatingCapacityCar">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
    </string-array>

    <string-array name="Type">
        <item>Sedan</item>
        <item>Micro</item>
        <item>SUV</item>
        <item>Pick-up</item>
        <item>Van</item>
        <item>Mini-Van</item>
        <item>Truck</item>
        <item>Mini-Truck</item>
    </string-array>

    <string-array name="Days">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
    </string-array>

    <string-array name="Hours">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
        <item>21</item>
        <item>22</item>
        <item>23</item>
    </string-array>

    <string-array name="Minutes">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
        <item>21</item>
        <item>22</item>
        <item>23</item>
        <item>24</item>
        <item>25</item>
        <item>26</item>
        <item>27</item>
        <item>28</item>
        <item>29</item>
        <item>30</item>
        <item>31</item>
        <item>32</item>
        <item>33</item>
        <item>34</item>
        <item>35</item>
        <item>36</item>
        <item>37</item>
        <item>38</item>
        <item>39</item>
        <item>40</item>
        <item>41</item>
        <item>42</item>
        <item>43</item>
        <item>44</item>
        <item>45</item>
        <item>46</item>
        <item>47</item>
        <item>48</item>
        <item>49</item>
        <item>50</item>
        <item>51</item>
        <item>52</item>
        <item>53</item>
        <item>54</item>
        <item>55</item>
        <item>56</item>
        <item>57</item>
        <item>58</item>
        <item>59</item>
    </string-array>

    <string-array name="deliveryStatus">
        <item>Available</item>
        <item>Not Available</item>
    </string-array>

    <string name="title_activity_rent_car">RentCar</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>