<LinearLayout

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@color/white">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="65dp"
        android:text="@string/hamari_sawari"
        android:textAllCaps="false"
        android:textColor="@color/HS"
        android:textSize="40sp"
        android:textStyle="italic"></TextView>

    <EditText
        android:id="@+id/adminid"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:hint="Admin_id"
        android:text=""
        android:inputType="textEmailAddress"
        android:minHeight="48dp"
        android:textColor="@color/black"
        android:textColorHint="#808080"></EditText>

    <EditText
        android:id="@+id/APass"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:hint="@string/password"
        android:text=""
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:textColor="@color/black"
        android:textColorHint="#808080"></EditText>

    <Button
        android:id="@+id/AdminsignIn"
        android:layout_width="280dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:background="@drawable/mybtn"
        android:text="@string/sign_in"
        android:textColor="@color/white"
        android:textStyle="italic"
        app:backgroundTint="@color/HS"></Button>

</LinearLayout>
